--- a/src/css/besttopic.css
+++ b/src/css/besttopic.css
@@ -90,12 +90,6 @@
     border-bottom: 1px solid rgba(128, 128, 128, .3);
 }
 
-.Best_Topic_last {
-    display: flex;
-    flex-direction: row;
-    padding-top: 7%;
-    padding-bottom: 6%;
-}
 
 .Best_Topic_Frame {
     width: 100%;
@@ -108,6 +102,7 @@
     width: 100%;
     display: flex;
     padding-bottom: 5%;
+    align-items: start;
     font-weight: bold;
     font-size: 1rem;
 }
@@ -124,18 +119,23 @@
     -webkit-box-orient: vertical;
 }
 
-.textbox {
-    border: none
+
+.Best_Topic_Img_Box {
+    width: 40%;
+    height: 100%;
+
+
+
 }
 
 .Best_Topic_Img {
     display: flex;
-    width: 30%;
+    width: 100%;
     height: 100%;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     /* border: 1px solid white; */
-    border-radius: 15px;
+    border-radius: 0.3rem;
 
 
     border: 1px solid gray;
@@ -195,7 +195,7 @@ details[open]>summary::-webkit-details-marker {
 }
 
 .SNS {
-    padding-top: 5%;
+    padding-top: 15%;
     flex-direction: column;
     position: relative;
 }
