--- a/src/css/besttopic.css
+++ b/src/css/besttopic.css
@@ -157,12 +157,17 @@
 }
 
 
+
+
 details {
     cursor: pointer;
 
 }
 
-details>span {
+
+
+
+details>div {
     font-size: 0.8rem;
     color: gray;
     opacity: 0.9;
@@ -171,27 +176,26 @@ details>span {
 
 }
 
-details>summary {
+details summary {
     font-size: 1rem;
     font-weight: bold;
     color: gray;
     opacity: 0.9;
 }
 
-details>summary::-webkit-details-marker {
-    display: none;
+.ArrowDownIcon {
+    position: absolute;
 }
 
-
-details>summary::-webkit-details-marker {
-    /* background: url("../img/expand_more_FILL0_wght400_GRAD0_opsz48.png") center center no-repeat/cover; */
-    content: "+"
+.ArrowUpIcon {
+    position:absolute;
 }
 
-details[open]>summary::-webkit-details-marker {
-    /* background: url("../img//expand_less_FILL0_wght400_GRAD0_opsz48.png") center center no-repeat/cover; */
-    content: "-"
+details summary::marker {
+    font-size: 0;
+
 }
+
 
 .SNS {
     padding-top: 15%;
