--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,64 +1,75 @@
 
-.profile-page-container {
+.profile-component-container {
     width: 100%;
-    height: 90px;
+    height: 70px;
     display: flex;
-    flex-direction: row;
-}
-
-.profile-page-imgbox {
-    display: flex;
-    width: 20%;
-    height: 100%;
     justify-content: center;
     align-items: center;
 }
 
-.profile-page-img {
-    width: 60%;
-    height: 70%;
-    border: 1px solid rgba(255, 255, 255, 0);
-    border-radius: 40px;
-
+.profile-component-box {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.profile-page-inforbox {
-    width: 60%;
+.profile-component-box-imgbox {
+    display: flex;
+    width: 10%;
+    height: 100%;
+}
+
+.profile-component-box-imgbox-img {
+    width: 50px;
+    height: 50px;
+    border: 1px solid white;
+    border-radius: 100%;
+}
+
+.profile-component-box-namebox {
     display: flex;
     flex-direction: column;
+    width: 75%;
+    height: 100%;
+    padding-left: 2%;
 }
 
-.profile-page-name {
+.profile-component-box-namebox-name {
     display: flex;
     width: 100%;
-    align-items: flex-end;
-    height: 60%;
+    height: 48%;
+    align-items: end;
 }
 
-.profile-page-placebox {
+.profile-component-box-namebox-namebox {
+    display: flex;
     width: 100%;
-    height: 50%;
-    display: flex;
-    flex-direction: row;
-}
-
-.profile-page-location {
-    width: auto;
-    color: blue;
-    font-size: 0.8rem;
-    margin-right: 10px;
-}
-
-.profile-page-date {
-    width: auto;
-    color: rgb(155, 154, 154);
-    font-weight: 300;
-    font-size: 0.8rem;
-}
-
-.profile-page-morebox {
-    display: flex;
-    width: 20%;
+    height: 48%;
+    padding-top: 2%;
     align-items: center;
-    justify-content: center;
+    font-size: 0.9rem;
+    font-weight: 300
+}
+
+.profile-component-box-namebox-namebox-location {
+    display: flex;
+    width: auto;
+    height: 100%;
+    padding-right: 5%;
+    align-items: flex-start;
+    color: #0060ff;
+}
+
+.profile-component-box-namebox-namebox-time {
+    display: flex;
+    width: auto;
+    height: 100%;
+    align-items: flex-start;
+}
+
+.profile-component-box-infobox {
+    display: flex;
+    width: 15%;
+    height: 100%;
 }
