--- a/src/css/mainlayout.css
+++ b/src/css/mainlayout.css
@@ -8,6 +8,7 @@ body {
     font-family: "Noto Sans KR", sans-serif;
     padding: 0 15%;
     height: 100%;
+    margin: 0 8px;
 }
 
 a {
@@ -21,7 +22,7 @@ a {
 
 .mainlayout {
     width: 100%;
-    height: 100%;
+    height: 98%;
     background-color: white;
     display: flex;
     align-items: center;
@@ -38,11 +39,25 @@ a {
 
 .mainlayout-main {
     width: 60%;
+    min-width: 800px;
     height: 100%;
     border-right: 1px solid lightgray;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 60px;
+}
+
+.mainlayout-main-titlebox {
+    display: flex;
+    width: 100%;
+    height: 5%;
+    align-items: center;
+    font-size: 32px;
+    font-weight: 700;
+    background-color: white;
+    padding: 30px 0;
 }
 
 .mainlayout-sub {
