--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,23 +1,78 @@
+:root {
+    --contentimg: 1;
+    --contentline: 1;
+}
+
+.flex {
+    display: flex;
+}
 
 .main-page-container {
     width: 100%;
     height: 90%;
-    margin: 0 40px;
+    margin: 24px 60px 0 60px;
     border: 1px solid black;
 }
 
 .main-page-contentbox {
+    padding: 0 20px;
+}
+
+.main-page-contentbox-title {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 26px;
+    padding-bottom: 8px;
+}
+
+.main-page-contentbox-content {
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 12px;
+}
+
+.main-page-contentbox-content-more {
+    cursor: pointer;
+    color: #cbced0;
+}
+
+.main-page-contentbox-imgbox {
+    width: 600px;
+    height: calc( 600px / var(--contentline ) );
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: relative;
+}
+
+.main-page-contentbox-imgbox-underbox {
+    display: flex;
+    width: calc( 100% / var(--contentimg) );
+    /* height: calc( 100% / var(--contentline) ); */
+    height: 100%;
+}
+
+.main-page-contentbox-imgbox-overbox {
+    display: flex;
+    width: calc( 100% / var(--contentimg) );
+}
+
+.main-page-contentbox-imgbox-span {
     width: 100%;
-    height: auto;
-    border: 1px solid #e5e7eb;
-    border-radius: 16px;
-    padding: 2% 0;
+    height: 100%;
 }
 
-.main-page-contenbox-content {
-    border: 1px solid red;
-    padding: 2%;
+.main-page-contentbox-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
+.main-page-contentbox-feedbackbox-over {
+    padding-top: 300px;
+}
+
+.main-page-contentbox-feedbackbox-under {
+    padding-top: 0;
+}
