--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,7 +1,9 @@
 
 .profile-component-container {
-    width: 100%;
+    width: auto;
     height: 70px;
+    padding: 0 20px;
+    margin-bottom: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,13 +18,14 @@
 
 .profile-component-box-imgbox {
     display: flex;
-    width: 10%;
-    height: 100%;
+    width: 46px;
+    min-width: 46px;
+    height: 46px;
 }
 
 .profile-component-box-imgbox-img {
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     border: 1px solid white;
     border-radius: 100%;
 }
@@ -32,7 +35,7 @@
     flex-direction: column;
     width: 75%;
     height: 100%;
-    padding-left: 2%;
+    margin-left: 16px;
 }
 
 .profile-component-box-namebox-name {
@@ -48,7 +51,7 @@
     height: 48%;
     padding-top: 2%;
     align-items: center;
-    font-size: 0.9rem;
+    font-size: 14px;
     font-weight: 300
 }
 
@@ -66,6 +69,7 @@
     width: auto;
     height: 100%;
     align-items: flex-start;
+    color: #93999f;
 }
 
 .profile-component-box-infobox {
