--- a/src/css/tag.css
+++ b/src/css/tag.css
@@ -5,10 +5,10 @@ p {
 }
 
 .component-tag-container {
-    width: 96%;
-    height: 80px;
+    width: auto;
+    height: 100%;
     display: flex;
-    padding: 10px 0;
+    padding: 0 20px 20px 20px;
     flex-direction: column;
 }
 
@@ -16,13 +16,11 @@ p {
     display: flex;
     align-items: center;
     font-size: 0.7rem;
-    height: 15px;
     flex-wrap: wrap;
 }
 
 .component-tag-tag {
-    display: flex;;
-    height: 100%;
+    display: flex;
     border-radius: 10px;
     align-items: center;
     margin: 4px 4px;
