--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,7 +11,12 @@
     width: 100%;
     height: 90%;
     margin: 24px 60px 0 60px;
-    border: 1px solid black;
+}
+
+.main-page-contentbox-border {
+    border: 1px solid #cbced0;
+    border-radius: 15px;
+    margin-bottom: 55px;
 }
 
 .main-page-contentbox {
@@ -59,8 +64,9 @@
 }
 
 .main-page-contentbox-imgbox-span {
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    height: 98%;
+    padding: 1%;
 }
 
 .main-page-contentbox-img {
@@ -70,9 +76,9 @@
 }
 
 .main-page-contentbox-feedbackbox-over {
-    padding-top: 300px;
+    padding: 320px 20px 20px 20px;
 }
 
 .main-page-contentbox-feedbackbox-under {
-    padding-top: 0;
+    padding: 20px;
 }
