--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,10 @@
     display: flex;
 }
 
+.cursor {
+    cursor: pointer;
+}
+
 .main-page-container {
     width: 100%;
     height: 90%;
@@ -20,7 +24,7 @@
 }
 
 .main-page-contentbox {
-    padding: 0 20px;
+    padding: 20px 20px 0 20px;
 }
 
 .main-page-contentbox-title {
@@ -76,9 +80,37 @@
 }
 
 .main-page-contentbox-feedbackbox-over {
-    padding: 320px 20px 20px 20px;
+    padding: 320px 0 20px 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .main-page-contentbox-feedbackbox-under {
-    padding: 20px;
+    padding: 0 20px 0 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-page-contentbox-feedbackbox-leftbox {
+    display: flex;
+}
+
+.main-page-contentbox-feedback-leftbox-icons {
+    margin-right: 6px;
+}
+
+.main-page-contentbox-feedback-leftbox-commentbox {
+    margin-left: 26px;
+}
+
+.main-page-contentbox-feedback-leftbox-counter {
+    color: #464c53;
+}
+
+.main-page-contentbox-feedbackbox-rightbox {
+    display: flex;
+}
+
+.main-page-contentbox-feedbackbox-last {
+    margin-left: 26px;
 }
