[UPDATE]add CopyRight

--- a/src/css/besttopic.css
+++ b/src/css/besttopic.css
@@ -146,10 +146,16 @@
 }
 
 .CopyRight {
+    display: flex;
+    flex-direction: row;    
+}
+
+.CopyRight_List{
     font-size: 0.1rem;
     color: gray;
     font-weight: 500;
     padding-right: 0.5vw;
+    cursor: pointer;
 }
 
 .GTH_Details {
