--- a/src/css/loginpage.css
+++ b/src/css/loginpage.css
@@ -111,7 +111,15 @@
     height: 6vh;
     font: 1.1rem;
     color: white;
-    font-weight: 500;
     opacity: 0.7;
     cursor: pointer;
+    font-size: 0.9vw;
+}
+
+.array_account{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 0.7vw;
+    padding-top: 5%;
 }
